# doni-referenceapi

./: .gitignore  README.md  pyproject.toml  tox.ini
data_files/: rapi.jsonschema
doni_referenceapi/: main.py
doni_referenceapi/common/types/: si_frequency.py
doni_referenceapi/models/: referenceapi.py
doni_testing/: main.py
src/reference_transmogrifier/: main.py  validate.py
src/reference_transmogrifier/models/: blazar.py  ironic_inspector.py  reference_repo.py
src/reference_transmogrifier/models/inspector/: __init__.py  dmi.py  extra_hardware.py  inventory.py  main.py  pci.ids  pci.py  utils.py
src/reference_transmogrifier/reference_api/: __init__.py
test_data/: doni_p3-ssd-010.json  gigaio01-inspect.json  rapi_p3-ssd-010.json
tests/: main.py
tests/test_data/: p3-ssd-010.json
tests/unit/: base.py  test_inspector.py  test_models.py  test_types.py
tests/unit/json_samples/: blazar_gigaio01.json  blazar_nc35.json  blazar_p3-ssd-010.json  hw-detect.json  ironic_inspector_gigaio01_noextra.json  ironic_inspector_nc35.json  ironic_inspector_p3-ssd-008.json  nvidia_pci_ids.json
tests/unit/json_samples/inspector/: c06-43-inventory.json  dmi_gigaio01.json  extra_hardware-c06-43.json  extra_hardware_gigaio01.json  gigaio01.json  inventory_gigaio01.json  p3-cpu-042.json
tests/unit/models/: test_referenceapi.py
transmogrifier/: main.py  test_models.py
transmogrifier/models/: reference_repo.py
transmogrifier/reference_api/: __init__.py
