[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "transmogrifier"
requires-python = ">=3.9"
dependencies = [
    "openstacksdk@git+https://github.com/ChameleonCloud/openstacksdk@chameleoncloud/blazar",
    "jsonschema",
    "pydantic"
]
dynamic = ["version"]

[tool.setuptools]
packages = ["transmogrifier"]

[project.scripts]
generate-reference-repo = "transmogrifier.main:main"