[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "reference-transmogrifier"
requires-python = ">=3.9"
dependencies = [
    "openstacksdk@git+https://github.com/ChameleonCloud/openstacksdk@chameleoncloud/blazar",
    "pydantic",
    "pydantic-extra-types",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["oslotest"]


[project.scripts]
generate-reference-repo = "reference_transmogrifier.main:main"
